new data format

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {"colours":{
-  "0":["0xd0", "0xd0", "0xd0"],
-  "1":["0x40", "0xff", "0xff"],
-  "2":["0", "0xa0", "0xff"],
-  "3":["0xa0", "0x80", "0xff"],
-  "6":["0xff", "0x40", "0xd0"],
-  "10":["0xff", "0x85", "0x85"],
-  "20":["0xd2", "0x44", "0x11"],
-  "50":["0xff", "0", "0"],
-  "100":["0xf0", "0xf0", "0x20"]
+  "0":  "d0d0d0",
+  "1":  "40ffff",
+  "2":  "00a0ff",
+  "3":  "a080ff",
+  "6":  "ff40d0",
+  "10": "ff8585",
+  "20": "d24411",
+  "50": "ff0000",
+  "100":"f0f020"
 }}
